=================== Release 1.0 2017-03-01 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/01)
        * Added support for more amicable notification messages. (2017/03/03)
        * Added support to remove project categories. (2017/03/03)
        * Removed tolerance from the calculation of FIRST_DAY. (2017/03/03)
        * Finally corrected bug with both queues, where tasks where not being migrated to the next day. (2017/03/03)
        * Added support for ProjectConfigurations view and also added support to ask the user before deleting a project. (2017/03/02)
        * Finally corrected bug with pending & dilate queues. Now it migrates tasks correctly to the next day. (2017/03/02)
        * Removed support for overlapping OPEN and ACCEPTING project states. (2017/03/01)
        * Removed support for copying tasks before adding to queues. And corrected a bug with the dates from tasks from these queues. (2017/03/01)
        * Added support to set the initial state of a task. (2017/03/01)
        * Improved function of FIRST_DAY, where it only goes until the project's closing time. (2017/03/01)
        * Added support for auto-dismiss messages. (2017/03/01)
        * Standarized checks before adding a task. (2017/03/01)
        * Excluded tasks marked as NOT APPLICABLE from SR. (2017/03/01)
        * Added support for copy the objects we add to each queue. (2017/02/28)
        * Added support for editing a task's name. (2017/02/28)
        * Added support for receiving notifications while the App is in the foreground. (2017/02/28)
        * Corrected minor bug in computation of SR for a day. (2017/02/28)
        * Added support for first day. (2017/02/28)
        * Added support for DilateQueues in each project. (2017/02/28)
        * Made sorting & adding views floating. Also minor modification to the system for computing height of a component from the bottom. (2017/02/27)