@@ -163,6 +163,15 @@ class AKAddTaskViewController: AKCustomViewController, UITextFieldDelegate, UIPi
         
         // Set default values.
         self.categoryValue.selectRow(0, inComponent: 0, animated: true)
+        
+        if DataInterface.getProjectStatus(project: self.project) == ProjectStatus.FIRST_DAY {
+            self.showMessage(
+                message: String(
+                    format: "%@, since this is your first day, we've made an exception to our basic rule, and all tasks you add now up to closing time are going to be added for today.",
+                    DataInterface.getUsername()
+                )
+            )
+        }
     }
     
     override func viewDidLayoutSubviews()
